# EncoderCovariance

./: CMakeLists.txt  README.md  package.xml
encoder_testing/: CMakeLists.txt  package.xml
encoder_testing/launch/: testing.launch
encoder_testing/scripts/: bicycle_model.py  bicycle_model_tester.py  fakeencoders.py  surajbicycle.py  tiva.py  vajra_odom.py
encoder_testing/src/: fakeencoder.cpp  vajracovariance.cpp
scripts/: radius_test.py  square_test.py  square_test_calculator.py  square_test_data  tiva_suraj.py  vajra_odom.py
