<?xml version="1.0"?>
<package format="2">
  <name>encoder_testing</name>
  <version>0.0.0</version>
  <description>The encoder_testing package</description>
  <maintainer email="uka@todo.todo">uka</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>virat_msgs</depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <!-- The export tag contains other, unspecified, tags -->
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
